--- a/views/index.ejs
+++ b/views/index.ejs
@@ -88,7 +88,7 @@
                       <div class="card-body">
                           <h4 class="card-title">Orders</h4>
                           <p>23% increase in conversion</p>
-                          <h4 class="text-dark font-weight-bold mb-2"><%= orders.length %></h4>
+                          <h4 class="text-dark font-weight-bold mb-2" id="number-orders"><%= orders.length %></h4>
                           <canvas id="customers"></canvas>
                       </div>
                     </div>
@@ -98,7 +98,7 @@
                       <div class="card-body">
                           <h4 class="card-title">Deliveries</h4>
                           <p>6% decrease in earnings</p>
-                          <h4 class="text-dark font-weight-bold mb-2"><%= deliveries.length %></h4>
+                          <h4 class="text-dark font-weight-bold mb-2" id="number-deliveries"><%= deliveries.length %></h4>
                           <canvas id="orders"></canvas>
                       </div>
                     </div>
