request-permission added

--- a/views/deliveries/deliveries.ejs
+++ b/views/deliveries/deliveries.ejs
@@ -149,6 +149,7 @@
   </div>
   <!-- container-scroller -->
   <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+   <script type="text/javascript" src="/js/request-notification-permission.js"></script>
   <script type="text/javascript" src="/js/delete.js"></script>
   <script type="text/javascript" src="/js/deliveries.js"></script>
   <script type="text/javascript" src="/js/orders.js"></script>
