--- a/views/foods/edit.ejs
+++ b/views/foods/edit.ejs
@@ -100,6 +100,7 @@
   <!-- container-scroller -->
   <!-- base:js -->
   <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+   <script type="text/javascript" src="/js/request-notification-permission.js"></script>
   <script src="/vendors/base/vendor.bundle.base.js"></script>
   <!-- endinject -->
   <!-- Plugin js for this page-->
