--- a/views/tables/create.ejs
+++ b/views/tables/create.ejs
@@ -33,10 +33,7 @@
                         <div class="col-12 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
-                  <h4 class="card-title">Basic form elements</h4>
-                  <p class="card-description">
-                    Basic form elements
-                  </p>
+                  <h4 class="card-title">Add new Table</h4>
                   <form action="/admin/tables/" method="POST" class="forms-sample">
                     <div class="form-group">
                       <label for="restaurant">Restaurant</label>
@@ -66,6 +63,7 @@
   <!-- container-scroller -->
   <!-- base:js -->
   <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+   <script type="text/javascript" src="/js/request-notification-permission.js"></script>
   <script src="/vendors/base/vendor.bundle.base.js"></script>
   <!-- endinject -->
   <!-- Plugin js for this page-->
