--- a/views/users/create.ejs
+++ b/views/users/create.ejs
@@ -36,9 +36,6 @@
               <div class="card">
                 <div class="card-body">
                   <h4 class="card-title">Add New User</h4>
-                  <p class="card-description">
-                    Fill Form
-                  </p>
                   <form action="/admin/users/" method="POST" class="forms-sample" enctype="multipart/form-data">
                     <div class="form-group">
                       <label for="username">Username</label>
@@ -100,6 +97,7 @@
   </div>
   <!-- container-scroller -->
   <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+  <script type="text/javascript" src="/js/request-notification-permission.js"></script>
   <script type="text/javascript" src="/js/validate-input.js"></script>
   <!-- base:js -->
   <script src="/vendors/base/vendor.bundle.base.js"></script>
