--- a/views/users/users.ejs
+++ b/views/users/users.ejs
@@ -35,7 +35,7 @@
                 <div class="card-body">
                   <h4 class="card-title">Users</h4>
                   <p class="card-description">
-                    Add class <code>.table-striped</code>
+                    Users List Table
                   </p>
                   <div class="table-responsive">
                     <table class="table table-striped table-hover">
@@ -94,6 +94,7 @@
   </div>
   <!-- container-scroller -->
   <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+  <script type="text/javascript" src="/js/request-notification-permission.js"></script>
   <script type="text/javascript" src="/js/delete.js"></script>
   <!-- base:js -->
   <script src="/vendors/base/vendor.bundle.base.js"></script>
