--- a/views/additions/additions.ejs
+++ b/views/additions/additions.ejs
@@ -89,6 +89,7 @@
   </div>
   <!-- container-scroller -->
   <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+   <script type="text/javascript" src="/js/request-notification-permission.js"></script>
   <script type="text/javascript" src="/js/delete.js"></script>
   <!-- base:js -->
   <script src="/vendors/base/vendor.bundle.base.js"></script>
