--- a/views/orders/edit.ejs
+++ b/views/orders/edit.ejs
@@ -142,6 +142,7 @@
   </div>
   <!-- container-scroller -->
   <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+   <script type="text/javascript" src="/js/request-notification-permission.js"></script>
   <script type="text/javascript" src="/js/edit-orders.js"></script>
   <!-- base:js -->
   <script src="/vendors/base/vendor.bundle.base.js"></script>
