--- a/views/restaurants/create.ejs
+++ b/views/restaurants/create.ejs
@@ -33,7 +33,7 @@
               <div class="col-12 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
-                  <h4 class="card-title">Basic form elements</h4>
+                  <h4 class="card-title">Add New Restaurant</h4>
                   <p class="card-description">
                     Basic form elements
                   </p>
@@ -62,6 +62,7 @@
   <!-- container-scroller -->
   <!-- base:js -->
   <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+   <script type="text/javascript" src="/js/request-notification-permission.js"></script>
   <script src="/vendors/base/vendor.bundle.base.js"></script>
   <!-- endinject -->
   <!-- Plugin js for this page-->
