--- a/views/restaurants/edit.ejs
+++ b/views/restaurants/edit.ejs
@@ -33,10 +33,7 @@
               <div class="col-12 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
-                  <h4 class="card-title">Basic form elements</h4>
-                  <p class="card-description">
-                    Basic form elements
-                  </p>
+                  <h4 class="card-title">Edit Restaurant</h4>
                   <form action="/admin/restaurants/<%= restaurant._id %>?_method=PUT" method="POST" class="forms-sample">
                     <input type="hidden" value="PUT" name="_method">
                     <div class="form-group">
@@ -63,6 +60,7 @@
   <!-- container-scroller -->
   <!-- base:js -->
   <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+   <script type="text/javascript" src="/js/request-notification-permission.js"></script>
   <script src="/vendors/base/vendor.bundle.base.js"></script>
   <!-- endinject -->
   <!-- Plugin js for this page-->
