--- a/views/tables/edit.ejs
+++ b/views/tables/edit.ejs
@@ -34,9 +34,6 @@
               <div class="card">
                 <div class="card-body">
                   <h4 class="card-title">Edit Table</h4>
-                  <p class="card-description">
-                    Informations
-                  </p>
                   <form action="/admin/tables/<%= table._id %>?_method=PUT" method="POST" class="forms-sample">
                     <input type="hidden" name="_method" value="PUT">
                     <div class="form-group">
@@ -69,6 +66,7 @@
   <!-- container-scroller -->
   <!-- base:js -->
   <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+   <script type="text/javascript" src="/js/request-notification-permission.js"></script>
   <script src="/vendors/base/vendor.bundle.base.js"></script>
   <!-- endinject -->
   <!-- Plugin js for this page-->
