--- a/views/tables/tables.ejs
+++ b/views/tables/tables.ejs
@@ -33,9 +33,9 @@
             <div class="col-lg-12 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
-                  <h4 class="card-title">Basic Table</h4>
+                  <h4 class="card-title">TableS</h4>
                   <p class="card-description">
-                    Add class <code>.table</code>
+                    Tbales List
                   </p>
                   <div class="table-responsive">
                     <table class="table">
@@ -79,6 +79,7 @@
   </div>
   <!-- container-scroller -->
   <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+   <script type="text/javascript" src="/js/request-notification-permission.js"></script>
   <script type="text/javascript" src="/js/delete.js"></script>
   <!-- base:js -->
   <script src="/vendors/base/vendor.bundle.base.js"></script>
