--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -36,9 +36,6 @@
               <div class="card">
                 <div class="card-body">
                   <h4 class="card-title">Edit User</h4>
-                  <p class="card-description">
-                    Fill Form
-                  </p>
                   <form action="/admin/users/<%= currentUser._id %>?_method=PUT" method="POST" class="forms-sample" enctype="multipart/form-data">
                     <input type="hidden" name="_method" value="PUT">
                     <div class="form-group">
@@ -104,6 +101,7 @@
   </div>
   <!-- container-scroller -->
   <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+  <script type="text/javascript" src="/js/request-notification-permission.js"></script>
   <script type="text/javascript" src="/js/validate-input.js"></script>
   <!-- base:js -->
   <script src="/vendors/base/vendor.bundle.base.js"></script>
